plugins {
  id 'java'
  id 'war'
}

group 'com.ra'
version '1.0-SNAPSHOT'

repositories {
  mavenCentral()
}

ext {
  junitVersion = '5.9.2'
}

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

dependencies {
  compileOnly('javax.servlet:javax.servlet-api:4.0.1')
  // https://mvnrepository.com/artifact/org.springframework/spring-webmvc
  implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.18'
  // https://mvnrepository.com/artifact/mysql/mysql-connector-java
  implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
  // https://mvnrepository.com/artifact/org.hibernate/hibernate-core
  implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.4.32.Final'
  // https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager
  implementation group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.6.15.Final'
  // https://mvnrepository.com/artifact/org.springframework/spring-orm
  implementation group: 'org.springframework', name: 'spring-orm', version: '5.3.18'
  // https://mvnrepository.com/artifact/jstl/jstl
  implementation group: 'jstl', name: 'jstl', version: '1.2'
  // https://mvnrepository.com/artifact/at.favre.lib/bcrypt
  implementation group: 'at.favre.lib', name: 'bcrypt', version: '0.9.0'

  // https://mvnrepository.com/artifact/org.mindrot/jbcrypt
  implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
  // https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf-spring5
  implementation group: 'org.thymeleaf', name: 'thymeleaf-spring5', version: '3.0.15.RELEASE'
  // https://mvnrepository.com/artifact/commons-io/commons-io
  implementation group: 'commons-io', name: 'commons-io', version: '2.4'
  // https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload
  implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.1'
  // https://mvnrepository.com/artifact/javax.validation/validation-api
  implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
  // https://mvnrepository.com/artifact/org.hibernate/hibernate-validator
  implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.1.0.Final'
// https://mvnrepository.com/artifact/org.projectlombok/lombok
//  compileOnly 'org.projectlombok:lombok:1.18.24'
//  annotationProcessor 'org.projectlombok:lombok:1.18.24'
  // https://mvnrepository.com/artifact/org.mindrot/jbcrypt
  implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4'

}

test {
useJUnitPlatform()}